--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </p>
       <div class="kolomStop"></div>
 
-      <img class="kolomLinks" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
+      <img src="afbeeldingen/photo alzheimer" >
       <p class="kolomRechts">
         Etiam rhoncus. Maecenas tempus, tellus eget
         condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
