--- a/index.html
+++ b/index.html
@@ -12,35 +12,30 @@
   <div class="page">
 
     <header>
-      <h1 id="hoofdtitel" class="belangrijk">De beste site van Nederland</h1>
+      <h1 id="hoofdtitel" class="belangrijk">Ziekte alzheimer</h1>
     </header>
 
     <nav>
       <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+        <li><a class="active" href="index.html">ziekte alzheimer</a></li>
+        <li><a href="overmij.html">bestrijden alzheimer</a></li>
+        <li><a href="info.html">info</a></li>
       </ul>
     </nav>
 
     <main>
-      <h2>Lorem Ipsum</h2>
-
-      <img class="kolomLinks" src="afbeeldingen/loremipsum.jpg" alt="lorem ipsum">
-      <p class="kolomRechts">
-        <a href="http://nu.nl">Klik hier</a> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
-        ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-        ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis
-        enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-        a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. <a
-          href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> elementum semper nisi. Aenean
-        vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem
-        ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque
-        rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+      <h2>Wat is alzheimer?</h2>
+      <div class="rij">
+        <img class="kolomRechts" src="afbeeldingen/alzheimer2.jpg" kolomlinks">
+        <p class="kolomLinks">
+          <a href="http://nu.nl">Klik hier</a> De ziekte van Alzheimer is de meest voorkomende vorm van dementie. Maar liefst 70% van alle mensen met dementie heeft alzheimer. Iemand met alzheimer krijgt problemen met het geheugen. Naarmate de ziekte erger wordt, krijgt iemand steeds meer moeite met dagelijkse vaardigheden en wordt niet meer beter.
+        </p>
+      </div>
+      <a href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> hier moet tekst komen
       </p>
       <div class="kolomStop"></div>
 
-      <img src="afbeeldingen/photo alzheimer" >
+      <img src="afbeeldingen/photo alzheimer">
       <p class="kolomRechts">
         Etiam rhoncus. Maecenas tempus, tellus eget
         condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
