--- a/hallo.html
+++ b/hallo.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-
-<html lang="nl">
-
-<head>
-  <link rel="stylesheet" href="style.css" />
-  <title>Dit is een eenvoudige website</title>
-  <meta charset="UTF-8" />
-</head>
-
 <body>
   <div class="page">
 
@@ -19,8 +9,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
-      <li><a href="info.html">Informatie</a></li>
+        <li><a href="info.html">Informatie</a></li>
+      <li><a class="active" href="hallo.html">redenen</a></li>
       </ul>
     </nav>
 
