--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a class="active" href="index.html">ziekte alzheimer</a></li>
         <li><a href="overmij.html">bestrijden alzheimer</a></li>
         <li><a href="info.html">info</a></li>
+        <li><a href="hallo.html">redenen</a></li>
       </ul>
     </nav>
 
