--- a/index.html
+++ b/index.html
@@ -21,11 +21,50 @@
         <li><a href="overmij.html">bestrijden alzheimer</a></li>
         <li><a href="info.html">info</a></li>
         <li><a href="hallo.html">redenen</a></li>
-        <li><a href=doorgevend.html">genetisch</a></li> 
       </ul>
     </nav>
 
-    
+    <main>
+      <h2>Wat is alzheimer?</h2>
+      <div class="rij">
+        <img class="kolomRechts plaatje" src="afbeeldingen/alzheimer2.jpg">
+        <p class="kolomLinks tekst">
+          <a href="http://nu.nl">Klik hier</a> De ziekte van Alzheimer is de meest voorkomende vorm van dementie. Maar
+          liefst 70% van alle mensen met dementie heeft alzheimer. Iemand met alzheimer krijgt problemen met het
+          geheugen. Naarmate de ziekte erger wordt, krijgt iemand steeds meer moeite met dagelijkse vaardigheden en
+          wordt niet meer beter.De oorzaak van alzheimer is onduidelijk.[2] Men denkt dat ongeveer 70% van het risico
+          genetisch is bepaald; er zijn meerdere genen bij betrokken. Andere risicofactoren zijn onder andere veelvuldig
+          hoofdletsel, depressie en hoge bloeddruk. Het onderliggende ziekteproces wordt in verband gebracht met plaques
+          en tangles in de hersenen.
+        </p>
+      </div>
+
+      <div class="rij">
+
+        <img class="kolomLinks plaatje" src="afbeeldingen/photo alzheimer">
+        <p class="kolomRechts tekst">
+          Etiam rhoncus. Maecenas tempus, tellus eget
+          condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit
+          vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut
+          libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed
+          fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue
+          velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam,
+          scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis
+          hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+          In
+          ac dui quis mi consectetuer lacinia.
+        </p>
+      </div>
+
+      <p>
+        Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed
+        aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent
+        adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero.
+        Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id,
+        imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque
+        facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit
+        quis, nisi.
+      </p>
 
     </main>
 
