--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+<body class="bg">
   <div class="page">
 
     <header>
@@ -19,8 +19,8 @@
       <ul>
         <li><a class="active" href="index.html">ziekte alzheimer</a></li>
         <li><a href="overmij.html">bestrijden alzheimer</a></li>
-        <li><a href="info.html">info</a></li>
-        <li><a href="hallo.html">redenen</a></li>
+        <li><a href="info.html">eigen ervaring</a></li>
+        <li><a  href="freemeneef.html">redenen</a></li>
       </ul>
     </nav>
 
@@ -29,10 +29,10 @@
       <div class="rij">
         <img class="kolomRechts plaatje" src="afbeeldingen/alzheimer2.jpg">
         <p class="kolomLinks tekst">
-          <a href="http://nu.nl">Klik hier</a> De ziekte van Alzheimer is de meest voorkomende vorm van dementie. Maar
+          De ziekte van Alzheimer is de meest voorkomende vorm van dementie. Maar
           liefst 70% van alle mensen met dementie heeft alzheimer. Iemand met alzheimer krijgt problemen met het
           geheugen. Naarmate de ziekte erger wordt, krijgt iemand steeds meer moeite met dagelijkse vaardigheden en
-          wordt niet meer beter.De oorzaak van alzheimer is onduidelijk.[2] Men denkt dat ongeveer 70% van het risico
+          wordt niet meer beter.De oorzaak van alzheimer is onduidelijk. Men denkt dat ongeveer 70% van het risico
           genetisch is bepaald; er zijn meerdere genen bij betrokken. Andere risicofactoren zijn onder andere veelvuldig
           hoofdletsel, depressie en hoge bloeddruk. Het onderliggende ziekteproces wordt in verband gebracht met plaques
           en tangles in de hersenen.
@@ -70,7 +70,7 @@
 
     <footer>
       <hr />
-      <p class="smalltext">--jouw school-- --jaartal--</p>
+      <p class="smalltext">--Martijn Lahr-- --2022--</p>
     </footer>
 
   </div>
