--- a/info.html
+++ b/info.html
@@ -17,10 +17,10 @@
 
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="overmij.html">Over mij</a></li>
-        <li><a class="active" href="info.html">Informatie</a></li>
-      <li><a href="info.html">Informatie</a></li>
+        <li><a href="index.html">ziekte alzheimer</a></li>
+        <li><a href="overmij.html">bestrijden alzheimer</a></li>
+        <li><a class="active" href="info.html">eigen ervaring</a></li>
+      <li><a href="freemeneef.html">redenen</a></li>
       </ul>
     </nav>
 
