--- a/overmij.html
+++ b/overmij.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8" />
 </head>
 
-<body>
+<body class="bg2">
   <div class="page">
 
     <header>
@@ -16,10 +16,11 @@
     </header>
 
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="overmij.html">Over mij</a></li>
-        <li><a href="info.html">Informatie</a></li>
+<ul>
+         <li><a href="index.html">ziekte alzheimer</a></li>
+        <li><a class="active" href="overmij.html">bestrijden alzheimer</a></li>
+        <li><a href="info.html">eigen ervaring</a></li>
+        <li><a  href="freemeneef.html">redenen</a></li>
       </ul>
     </nav>
 
